--- a/Quiz_mkd/Areas/Admin/Views/Event/Create.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Event/Create.cshtml
@@ -25,6 +25,12 @@
                     <span asp-validation-for="Event.Description" class="text-danger"></span>
                 </div>
 
+                <div class="mb-3 row p-1">
+                    <label asp-for="Event.Destination" class="p-0"></label>
+                    <input asp-for="Event.Destination" class="form-control" />
+                    <span asp-validation-for="Event.Destination" class="text-danger"></span>
+                </div>
+
 
                 <div class="mb-3 row p-1">
                     <label asp-for="Event.StartDate" class="p-0"></label>
