--- a/Quiz_mkd/Areas/Admin/Views/RangList/PendingUsers.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/RangList/PendingUsers.cshtml
@@ -14,7 +14,7 @@
             }
         }
         <div class="col-4">
-            <a class="btn btn-primary" asp-area="User"
+            <a class="btn btn-primary" asp-area="Admin"
             asp-controller="RangList" asp-action="Index"
                 asp-route-eventId="@id_event"
             >Ранг Листа Додавај Поени</a>
