--- a/Quiz_mkd/Areas/User/Views/RangList/Index.cshtml
+++ b/Quiz_mkd/Areas/User/Views/RangList/Index.cshtml
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row pt-4 pb-3">
         <div class="col-6">
-            <h2 class="text-primary">Ранг листа за @Model.RangList.Event.Name</h2>
+            <h2 class="text-primary">Ранг листа за @Model.Event.Name</h2>
         </div>
     </div>
 
