--- a/Quiz_mkd/Areas/Admin/Views/RangList/AddPointsToUser.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/RangList/AddPointsToUser.cshtml
@@ -14,17 +14,22 @@
 
     <div class="card-body p-4">
         <form method="post">
-            <input type="hidden" name="eventId" value="@Model.Event.Id" />
-            <input type="hidden" name="userId" value="@Model.User.Id" />
+            <input type="hidden" asp-for="Event.Id"/>
+            <input type="hidden" asp-for="User.Id"/>
 
             <div class="border p-3 mt-4">
                
-                @foreach(var categoryUser in Model.CategoryUsers)
+                @for (int i = 0; i < Model?.CategoryUsers?.Count;i++)  
                 {
 
                     <div class="mb-3 row p-1">
-                        <label class="p-0">@categoryUser.Category.categoryName</label>
-                        <input asp-for="@categoryUser.Points" class="form-control" value="@categoryUser.Points" />
+                        <label class=" p-0">@Model.CategoryUsers[i].Category.categoryName</label>
+                        <input type=number asp-for="CategoryUsers[i].Points" class="form-control" />
+                        <span asp-validation-for="CategoryUsers[i].Points" class="text-danger"></span>
+                        <input type="hidden" asp-for="CategoryUsers[i].CategoryId" />
+                        <input type="hidden" asp-for="CategoryUsers[i].RangListId" />
+                        <input type="hidden" asp-for="CategoryUsers[i].UserId" />
+
                     </div>
                 }
 
