--- a/Quiz_mkd/Areas/Admin/Views/RangList/PendingUsers.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/RangList/PendingUsers.cshtml
@@ -1,29 +1,22 @@
-﻿@model IEnumerable<ApplicationUserVM>
+﻿@model ApplicationUserVM
 
 <div class="container">
     <div class="row pt-4 pb-3">
         <div class="col-4">
             <h2 class="text-primary">Листа на Пријавени Учесници</h2>
         </div>
-        @{
-            int? id_event = 0;
-            foreach (var item in Model) 
-            {
-                id_event = item.EventId;
-                break;
-            }
-        }
+       
         <div class="col-4">
             <a class="btn btn-primary" asp-area="Admin"
             asp-controller="RangList" asp-action="Index"
-                asp-route-eventId="@id_event"
+                asp-route-eventId="@Model.EventId"
             >Ранг Листа Додавај Поени</a>
         </div>
 
         <div class="col-4">
             <a class="btn btn-info" asp-area="Admin"
                asp-controller="RangList" asp-action="EditTable"
-               asp-route-eventId="@id_event">Едитирај ги колоните од табелата</a>
+               asp-route-eventId="@Model.EventId">Едитирај ги колоните од табелата</a>
         </div>
     </div>
 
@@ -39,18 +32,18 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model)
+            @foreach (var item in Model.UsersList)
             {
                 <tr>
-                    <td>@item?.User?.Email</td>
-                    <td>@item?.User?.NameUser @item?.User?.Surname </td>
-                    <td>@item?.User?.PlaceOfOrigin</td>
+                    <td>@item?.Email</td>
+                    <td>@item?.NameUser @item?.Surname </td>
+                    <td>@item?.PlaceOfOrigin</td>
 
                     <td>
                         <div class="w-75 btn-group" role="group">
 
                             <a asp-area="Admin" asp-controller="RangList" 
-                            asp-action="PayedToParticipate" asp-route-userId="@item?.User?.Id" asp-route-eventId="@item?.EventId"  
+                            asp-action="PayedToParticipate" asp-route-userId="@item?.Id" asp-route-eventId="@Model.EventId"  
                             class="btn btn-success mx-2">
                                 Платено
                             </a>
