--- a/Quiz_mkd/Areas/User/Views/RangList/Index.cshtml
+++ b/Quiz_mkd/Areas/User/Views/RangList/Index.cshtml
@@ -1,48 +1,102 @@
-﻿@model RangListVM
+﻿@model ShowRangListOptionsVM
+
+<form asp-area="User" asp-controller="RangList" asp-action="FilterRangList" method="post">
+    <div class="row">
+        <div class="col-3">
+            <div class="mb-3 row p-1">
+                <label class="p-0">Селектирај Настан</label>
+                <select asp-for="SelectedEventId" asp-items="@Model.Events" class="p-0 form-select">
+                    <option disabled selected>--Селектирај Настан--</option>
+                </select>
+                <span asp-validation-for="SelectedEventId" class="text-danger"></span>
+            </div>
+        </div>
+
+        <div class="col-3">
+            <div class="mb-3 row p-1">
+                <label class="p-0">Селектирај Категорија</label>
+                <select asp-for="SelectedCategoryId" asp-items="@Model.Categories" class="p-0 form-select">
+                    <option disabled selected>--Селектирај Категорија--</option>
+                </select>
+                <span asp-validation-for="SelectedCategoryId" class="text-danger"></span>
+            </div>
+        </div>
+
+        <div class="col-3">
+            <div class="mb-3 row p-1">
+                <label class="p-0">Селектирај Година</label>
+                <select asp-for="SelectedYear" asp-items="@Model.EventsByYear" class="p-0 form-select">
+                    <option disabled selected>--Селектирај Година--</option>
+                </select>
+                <span asp-validation-for="SelectedYear" class="text-danger"></span>
+            </div>
+        </div>
+
+        <div class="col-3">
+            <button type="submit" class="btn btn-success">Пребарај</button>
+        </div>
+    </div>
+</form>
+
+
+    
+    
 
 <div class="container">
     <div class="row pt-4 pb-3">
         <div class="col-6">
-            <h2 class="text-primary">Ранг листа за @Model.Event.Name</h2>
+            <h2 class="text-primary">Ранг листа за @Model?.ShowRangList?.Event?.Name</h2>
         </div>
     </div>
 
     <table class="table table-bordered table-striped">
         <thead>
             <tr>
+                <th>Место</th>
+                <th>Име и Презиме</th>
+                <th>Град</th>
+                @if (Model?.ShowRangList?.CategoriesRangList != null)
+                {
+                    @foreach (var category in Model?.ShowRangList?.CategoriesRangList)
+                    {
+                        <th>@category?.Category?.categoryName</th>
+                    }
+                }
+              
+                 <th>Вкупно</th>
                 
-                <th>Одговор</th>
-                <th>Точен</th>
-                        <th></th>
-               
             </tr>
         </thead>
         <tbody>
-          @*   @foreach (var item in Model)
+            @{
+                int i = 1;
+            }
+            @if (Model?.ShowRangList?.RangListUsers != null)
             {
-                <tr>
-                    <td>@item?.Text</td>
-                    @if (item?.isCorrect == true)
-                    {
-                        <td>Точен</td>
-                    }
-                    else
-                    {
-                        <td>Неточен</td>
-                    }
 
-                    <td>
-                        <div class="w-75 btn-group" role="group">
-                            <a  asp-area="Admin" asp-controller="Answer" asp-action="Edit" asp-route-id="@item?.Id" class="btn btn-primary mx-2">
-                                Едитирај
-                            </a>
-                          
-                        </div>
+                @foreach (var user in Model?.ShowRangList?.RangListUsers)
+                {
+                    <tr>
+                        <td>@(i++)</td>
+                        <td>@user?.User?.NameUser @user?.User?.Surname</td>
+                        <td>@user?.User?.PlaceOfOrigin</td>
+                        @foreach (var category in Model?.ShowRangList?.CategoriesRangList)
+                        {
+                            var userCategory = Model?.ShowRangList?.CategoryUsers?
+                            .FirstOrDefault(cu => cu.UserId == user?.User?.Id && cu.CategoryId == category?.Category?.Id);
 
-                    </td>
+                            <td>@(userCategory?.Points ?? 0)</td> <!-- If no points, default to 0 -->
+                        }
+                        <td>@user?.Points</td>
 
-                </tr>
-            } *@
+
+
+                    </tr>
+                }
+            
+            }
+          
+            
 
         </tbody>
 
