--- a/Quiz_mkd/Views/Shared/_Layout.cshtml
+++ b/Quiz_mkd/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                        
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="User" asp-controller="User" asp-action="RangList">Ранг Листа</a>
+                            <a class="nav-link text-dark" asp-area="User" asp-controller="RangList" asp-action="Index">Ранг Листа</a>
                         </li>
 
                         @if (User.IsInRole(SD.Role_Admin))
