--- a/Quiz_mkd/Areas/Admin/Views/RangList/Index.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/RangList/Index.cshtml
@@ -48,6 +48,13 @@
                                class="btn btn-primary mx-2">
                                 Додади Поени
                             </a>
+
+                            <a asp-area="Admin" asp-controller="RangList"
+                               asp-action="RemoveUserFromRangList" asp-route-userId="@user?.User.Id"
+                               asp-route-eventId="@Model.Event.Id"
+                               class="btn btn-danger mx-2">
+                                Отстрани
+                            </a>
                           
                         </div>
 
