--- a/Quiz_mkd/Areas/User/Views/RangList/Index.cshtml
+++ b/Quiz_mkd/Areas/User/Views/RangList/Index.cshtml
@@ -6,7 +6,7 @@
             <div class="mb-3 row p-1">
                 <label class="p-0">Селектирај Настан</label>
                 <select asp-for="SelectedEventId" asp-items="@Model.Events" class="p-0 form-select">
-                    <option disabled selected>--Селектирај Настан--</option>
+                    <option selected value="">--Селектирај Настан--</option>
                 </select>
                 <span asp-validation-for="SelectedEventId" class="text-danger"></span>
             </div>
@@ -16,7 +16,7 @@
             <div class="mb-3 row p-1">
                 <label class="p-0">Селектирај Категорија</label>
                 <select asp-for="SelectedCategoryId" asp-items="@Model.Categories" class="p-0 form-select">
-                    <option disabled selected>--Селектирај Категорија--</option>
+                    <option selected value="">--Селектирај Категорија--</option>
                 </select>
                 <span asp-validation-for="SelectedCategoryId" class="text-danger"></span>
             </div>
@@ -26,7 +26,7 @@
             <div class="mb-3 row p-1">
                 <label class="p-0">Селектирај Година</label>
                 <select asp-for="SelectedYear" asp-items="@Model.EventsByYear" class="p-0 form-select">
-                    <option disabled selected>--Селектирај Година--</option>
+                    <option  selected value="">--Селектирај Година--</option>
                 </select>
                 <span asp-validation-for="SelectedYear" class="text-danger"></span>
             </div>
