Added the final touches for the project

--- a/Quiz_mkd/Areas/Admin/Views/Answer/Create.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Answer/Create.cshtml
@@ -44,7 +44,7 @@
                         <button type="submit" class="btn btn-primary form-control">Додади</button>
                     </div>
                     <div class="col-6 col-md-3">
-                        <a asp-area="Admin" asp-controller="Question" asp-action="Create" class="btn btn-outline-secondary border form-control">Врати се назад</a>
+                        <a asp-area="Admin" asp-controller="Question" asp-action="Create" class="btn btn-primary form-control">Врати се назад</a>
                     </div>
                 </div>
 
