--- a/Quiz_mkd/Areas/Admin/Views/Event/Delete.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Event/Delete.cshtml
@@ -54,7 +54,7 @@
                     <input disabled type="file" name="file" class="form-control" />
                     @if (!string.IsNullOrEmpty(Model.ImageUrl))
                     {
-                        <img src="@Model.ImageUrl" alt="Image" class="img-fluid" />
+                        <img src="@Model.ImageUrl" alt="Image" class="img-fluid w-25" />
                     }
                 </div>
 
@@ -65,7 +65,7 @@
                         <button type="submit" class="btn btn-primary form-control">Избриши</button>
                     </div>
                     <div class="col-6 col-md-3">
-                        <a asp-area="User" asp-controller="Event" asp-action="Index" class="btn btn-outline-secondary border form-control">Врати се назад</a>
+                        <a asp-area="User" asp-controller="Event" asp-action="Index" class="btn btn-primary border form-control">Врати се назад</a>
                     </div>
                 </div>
 
