--- a/Quiz_mkd/Areas/User/Views/RangList/Index.cshtml
+++ b/Quiz_mkd/Areas/User/Views/RangList/Index.cshtml
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-3">
             <div class="mb-3 row p-1">
-                <label class="p-0">Селектирај Настан</label>
+                <label class="p-0 text-black">Селектирај Настан</label>
                 <select asp-for="SelectedEventId" asp-items="@Model.Events" class="p-0 form-select">
                     <option selected value="">--Селектирај Настан--</option>
                 </select>
@@ -13,8 +13,8 @@
         </div>
 
         <div class="col-3">
-            <div class="mb-3 row p-1">
-                <label class="p-0">Селектирај Категорија</label>
+            <div class="mb-3 row p-1 ">
+                <label class="p-0 text-black">Селектирај Категорија</label>
                 <select asp-for="SelectedCategoryId" asp-items="@Model.Categories" class="p-0 form-select">
                     <option selected value="">--Селектирај Категорија--</option>
                 </select>
@@ -24,7 +24,7 @@
 
         <div class="col-3">
             <div class="mb-3 row p-1">
-                <label class="p-0">Селектирај Година</label>
+                <label class="p-0 text-black">Селектирај Година</label>
                 <select asp-for="SelectedYear" asp-items="@Model.EventsByYear" class="p-0 form-select">
                     <option  selected value="">--Селектирај Година--</option>
                 </select>
