--- a/Quiz_mkd/Areas/Admin/Views/Answer/Delete.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Answer/Delete.cshtml
@@ -36,7 +36,7 @@
                         <button type="submit" class="btn btn-primary form-control">Избриши</button>
                     </div>
                     <div class="col-6 col-md-3">
-                        <a asp-area="Admin" asp-controller="Answer" asp-action="Index" asp-route-id="QuestionId" class="btn btn-outline-secondary border form-control">Врати се назад</a>
+                        <a asp-area="Admin" asp-controller="Answer" asp-action="Index" asp-route-id="QuestionId" class="btn btn-primary form-control">Врати се назад</a>
                     </div>
                 </div>
 
