--- a/Quiz_mkd/Areas/Admin/Views/Email/Create.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Email/Create.cshtml
@@ -1,9 +1,9 @@
 ﻿@model EmailVM
 
 
-<body class="container mt-4">
 
-    <h2 class="mb-3">Compose Email</h2>
+
+    <h2 class="text-primary">Compose Email</h2>
 
         @if (Model.emailsSent) 
         {
@@ -12,13 +12,13 @@
 
     <form method="post">
         <!-- Subject Input -->
-        <div class="mb-3">
+    <div class="mb-3 text-primary">
             <label asp-for="@Model.subject" class="form-label">Subject</label>
             <input asp-for="@Model.subject"  class="form-control" placeholder="Enter subject" required>
         </div>
 
         <!-- Message Textarea -->
-        <div class="mb-3">
+    <div class="mb-3 text-primary">
             <label asp-for="@Model.htmlMessage" class=" form-label">Message</label>
             <textarea asp-for="@Model.htmlMessage"class=" form-control" rows="5" placeholder="Write your message here..." required></textarea>
         </div>
@@ -38,5 +38,4 @@
         <button type="submit" class="btn btn-primary">Send Email</button>
     </form>
 
-</body>
-</html>
+
