--- a/Quiz_mkd/Areas/Admin/Views/Question/Delete.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Question/Delete.cshtml
@@ -25,7 +25,7 @@
                         <button type="submit" class="btn btn-danger form-control">Избриши</button>
                     </div>
                     <div class="col-6 col-md-3">
-                        <a asp-area="Admin" asp-controller="Quiz" asp-action="Detail" asp-route-id="Question.QuizId" class="btn btn-outline-secondary border form-control">Врати се назад</a>
+                        <a asp-area="Admin" asp-controller="Quiz" asp-action="Detail" asp-route-id="Question.QuizId" class="btn btn-primary form-control">Врати се назад</a>
                     </div>
                 </div>
 
