--- a/Quiz_mkd/Areas/Admin/Views/Quiz/Create.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Quiz/Create.cshtml
@@ -38,7 +38,7 @@
                     <input type="file" name="file" class="form-control" />
                     @if (!string.IsNullOrEmpty(Model.Quiz.ImageUrl))
                     {
-                        <img src="@Model.Quiz.ImageUrl" alt="Image" class="img-fluid" />
+                        <img src="@Model.Quiz.ImageUrl" alt="Image" class="img-fluid w-25" />
                     }
                 </div>
 
@@ -48,7 +48,7 @@
                         <button type="submit" class="btn btn-primary form-control">Додади</button>
                     </div>
                     <div class="col-6 col-md-3">
-                        <a asp-area="User" asp-controller="Quiz" asp-action="Index" class="btn btn-outline-secondary border form-control">Врати се назад</a>
+                        <a asp-area="User" asp-controller="Quiz" asp-action="Index" class="btn btn-primary form-control">Врати се назад</a>
                     </div>
                 </div>
 
