--- a/Quiz_mkd/Areas/Admin/Views/Quiz/Delete.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Quiz/Delete.cshtml
@@ -39,7 +39,7 @@
                         <button type="submit" class="btn btn-primary form-control">Избриши</button>
                     </div>
                     <div class="col-6 col-md-3">
-                        <a asp-area="User" asp-controller="Quiz" asp-action="Index" class="btn btn-outline-secondary border form-control">Врати се назад</a>
+                        <a asp-area="User" asp-controller="Quiz" asp-action="Index" class="btn btn-primary form-control">Врати се назад</a>
                     </div>
                 </div>
 
