--- a/Quiz_mkd/Areas/Admin/Views/RangList/AddPointsToUser.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/RangList/AddPointsToUser.cshtml
@@ -38,7 +38,7 @@
                         <button type="submit" class="btn btn-primary form-control">Додади</button>
                     </div>
                     <div class="col-6 col-md-3">
-                        <a asp-area="Admin" asp-controller="RangList" asp-action="Index" asp-route-eventId="@Model.Event.Id" class="btn btn-outline-secondary border form-control">Врати се назад</a>
+                        <a asp-area="Admin" asp-controller="RangList" asp-action="Index" asp-route-eventId="@Model.Event.Id" class="btn btn-primary form-control">Врати се назад</a>
                     </div>
                 </div>
 
