--- a/Quiz_mkd/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Quiz_mkd/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -12,15 +12,37 @@
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
-                <input asp-for="Username" class="form-control" placeholder="Please choose your username." disabled />
+                <input asp-for="Username" class="form-control" placeholder="Внеси го твојот маил." disabled />
                 <label asp-for="Username" class="form-label"></label>
             </div>
-         @*    <div class="form-floating mb-3">
+
+            <div class="form-floating mb-3">
+                <input asp-for="Input.NameUser" class="form-control" placeholder="Внеси го твоето име." />
+                <label asp-for="Input.NameUser" class="form-label"></label>
+            </div>
+
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Surname" class="form-control" placeholder="Внеси го твоето презиме." />
+                <label asp-for="Input.Surname" class="form-label"></label>
+            </div>
+
+            <div class="form-floating mb-3">
+                <input asp-for="Input.PlaceOfOrigin" class="form-control" placeholder="Внеси го твоето место на потекнување." />
+                <label asp-for="Input.PlaceOfOrigin" class="form-label"></label>
+            </div>
+
+            <div class="form-floating mb-3">
+                <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Внеси го твојот тел. број." />
+                <label asp-for="Input.PhoneNumber" class="form-label"></label>
+            </div>
+
+
+        @*     <div class="form-floating mb-3">
                 <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Please enter your phone number."/>
                 <label asp-for="Input.PhoneNumber" class="form-label"></label>
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-            </div>
-            <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button> *@
+            </div> *@
+            <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
         </form>
     </div>
 </div>
