--- a/Quiz_mkd/Views/Shared/_Layout.cshtml
+++ b/Quiz_mkd/Views/Shared/_Layout.cshtml
@@ -6,11 +6,11 @@
     <title>@ViewData["Title"] - Quiz_mkd</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Quiz_mkd.styles.css" asp-append-version="true" />
-</head>
+@*     <link rel="stylesheet" href="~/Quiz_mkd.styles.css" asp-append-version="true" />
+ *@</head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav @* class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3" *@ class="navbar navbar-expand-lg bg-primary mb-3" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Quiz_mkd</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -20,7 +20,15 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Дома</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Дома</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="User" asp-controller="ForUs" asp-action="Index">За нас</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="User" asp-controller="ForTheAccociation" asp-action="Index">За Асоцијација</a>
                         </li>
                         
                       @*   <li class="nav-item">
@@ -29,33 +37,33 @@
 
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="User" asp-controller="Event" asp-action="Index">Соопштенија</a>
+                            <a class="nav-link" asp-area="User" asp-controller="Event" asp-action="Index">Соопштенија</a>
                         </li>
                         
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="User" asp-controller="Quiz" asp-action="Index">Квиз</a>
+                            <a class="nav-link" asp-area="User" asp-controller="Quiz" asp-action="Index">Квиз</a>
                         </li>
                        
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="User" asp-controller="RangList" asp-action="Index">Ранг Листа</a>
+                            <a class="nav-link" asp-area="User" asp-controller="RangList" asp-action="Index">Ранг Листа</a>
                         </li>
 
                         @if (User.IsInRole(SD.Role_Admin))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="Admin" asp-controller="TypeQuestion" asp-action="Index">Тип на Квиз</a>
+                                <a class="nav-link " asp-area="Admin" asp-controller="TypeQuestion" asp-action="Index">Тип на Квиз</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="Admin" asp-controller="User" asp-action="Index">Users</a>
+                                <a class="nav-link" asp-area="Admin" asp-controller="User" asp-action="Index">Users</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="Admin" asp-controller="Email" asp-action="Create">Прати Маил</a>
+                                <a class="nav-link" asp-area="Admin" asp-controller="Email" asp-action="Create">Прати Маил</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="Admin" asp-controller="Category" asp-action="Index">Категорија</a>
+                                <a class="nav-link" asp-area="Admin" asp-controller="Category" asp-action="Index">Категорија</a>
                             </li>
 
 
@@ -75,7 +83,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="container text-dark">
             &copy; 2025 - Quiz_mkd - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
