--- a/Quiz_mkd/Areas/Admin/Views/RangList/Index.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/RangList/Index.cshtml
@@ -5,6 +5,11 @@
         <div class="col-6">
             <h2 class="text-primary">Ранг листа за @Model.Event.Name</h2>
         </div>
+        <div class="col-4">
+            <a class="btn btn-info" asp-area="Admin"
+               asp-controller="RangList" asp-action="EditTable"
+               asp-route-eventId="@Model.Event.Id">Едитирај ги колоните од табелата</a>
+        </div>
     </div>
 
     <table class="table table-bordered table-striped">
@@ -43,14 +48,14 @@
                     <td>
                         <div class="w-75 btn-group" role="group">
                             <a asp-area="Admin" asp-controller="RangList"
-                            asp-action="AddPointsToUser" asp-route-userId="@user?.User.Id"
+                            asp-action="AddPointsToUser" asp-route-userId="@user?.User?.Id"
                                asp-route-eventId="@Model.Event.Id"
                                class="btn btn-primary mx-2">
                                 Додади Поени
                             </a>
 
                             <a asp-area="Admin" asp-controller="RangList"
-                               asp-action="RemoveUserFromRangList" asp-route-userId="@user?.User.Id"
+                               asp-action="RemoveUserFromRangList" asp-route-userId="@user?.User?.Id"
                                asp-route-eventId="@Model.Event.Id"
                                class="btn btn-danger mx-2">
                                 Отстрани
