Frontedn for quiz list, play quiz, all admin pages

--- a/Quiz_mkd/Areas/Admin/Views/Answer/Edit.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Answer/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Answer 
-<div class="card shadow border-0 mt-4">
+<div class="card shadow border-0 mt-4" id="create-question-card">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
@@ -32,10 +32,10 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-6 col-md-3">
+                    <div >
                         <button type="submit" class="btn btn-primary form-control">Промени</button>
                     </div>
-                    <div class="col-6 col-md-3">
+                    <div >
                         <a asp-area="Admin"  asp-controller="Answer" asp-action="Index" asp-route-id="@Model.QuestionId" class="btn btn-primary form-control">Врати се назад</a>
                     </div>
                 </div>
