--- a/Quiz_mkd/Areas/Admin/Views/Email/Create.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Email/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EmailVM
 
 
-
+<div id="<create-question-card">
 
     <h2 class="text-primary">Compose Email</h2>
 
@@ -37,5 +37,6 @@
         <!-- Send Button -->
         <button type="submit" class="btn btn-primary">Send Email</button>
     </form>
+</div>
 
 
