--- a/Quiz_mkd/Areas/Admin/Views/Question/Create.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Question/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model QuestionVM
 
-<div class="card shadow border-0 mt-4">
+<div class="card shadow border-0 mt-4" id="create-question-card">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="text-white py-2">Создади Прашање</h2>
+                <h2 class="text-white py-2">Креирај прашање</h2>
             </div>
         </div>
     </div>
@@ -47,10 +47,10 @@
                         <label asp-for="Answer1.isCorrect" class="p-0"></label>
                         <div>
                             <label class="form-check-label" for="isCorrectTrue">Точен</label>
-                            <input type="radio" id="isCorrectTrue" asp-for="Answer1.isCorrect" value="true" class="form-check-input" />
+                            <input type="radio" id="isCorrectTrue1" asp-for="Answer1.isCorrect" value="true" class="form-check-input" />
 
                             <label class="form-check-label" for="isCorrectFalse">Неточен</label>
-                            <input type="radio" id="isCorrectFalse" asp-for="Answer1.isCorrect" value="false" class="form-check-input" />
+                            <input type="radio" id="isCorrectFalse1" asp-for="Answer1.isCorrect" value="false" class="form-check-input" />
                         </div>
                         <span asp-validation-for="Answer1.isCorrect" class="text-danger"></span>
                    </div>
@@ -66,10 +66,10 @@
                     <label asp-for="Answer2.isCorrect" class="p-0"></label>
                     <div>
                         <label class="form-check-label" for="isCorrectTrue">Точен</label>
-                        <input type="radio" id="isCorrectTrue" asp-for="Answer2.isCorrect" value="true" class="form-check-input" />
+                        <input type="radio" id="isCorrectTrue2" asp-for="Answer2.isCorrect" value="true" class="form-check-input" />
 
                         <label class="form-check-label" for="isCorrectFalse">Неточен</label>
-                        <input type="radio" id="isCorrectFalse" asp-for="Answer2.isCorrect" value="false" class="form-check-input" />
+                        <input type="radio" id="isCorrectFalse2" asp-for="Answer2.isCorrect" value="false" class="form-check-input" />
                     </div>
                     <span asp-validation-for="Answer2.isCorrect" class="text-danger"></span>
                 </div>
@@ -85,10 +85,10 @@
                     <label asp-for="Answer3.isCorrect" class="p-0"></label>
                     <div>
                         <label class="form-check-label" for="isCorrectTrue">Точен</label>
-                        <input type="radio" id="isCorrectTrue" asp-for="Answer3.isCorrect" value="true" class="form-check-input" />
+                        <input type="radio" id="isCorrectTrue3" asp-for="Answer3.isCorrect" value="true" class="form-check-input" />
 
                         <label class="form-check-label" for="isCorrectFalse">Неточен</label>
-                        <input type="radio" id="isCorrectFalse" asp-for="Answer3.isCorrect" value="false" class="form-check-input" />
+                        <input type="radio" id="isCorrectFalse3" asp-for="Answer3.isCorrect" value="false" class="form-check-input" />
                     </div>
                     <span asp-validation-for="Answer3.isCorrect" class="text-danger"></span>
                 </div>
@@ -104,10 +104,10 @@
                     <label asp-for="Answer4.isCorrect" class="p-0"></label>
                     <div>
                         <label class="form-check-label" for="isCorrectTrue">Точен</label>
-                        <input type="radio" id="isCorrectTrue" asp-for="Answer4.isCorrect" value="true" class="form-check-input" />
+                        <input type="radio" id="isCorrectTrue4" asp-for="Answer4.isCorrect" value="true" class="form-check-input" />
 
                         <label class="form-check-label" for="isCorrectFalse">Неточен</label>
-                        <input type="radio" id="isCorrectFalse" asp-for="Answer4.isCorrect" value="false" class="form-check-input" />
+                        <input type="radio" id="isCorrectFalse4" asp-for="Answer4.isCorrect" value="false" class="form-check-input" />
                     </div>
                     <span asp-validation-for="Answer4.isCorrect" class="text-danger"></span>
                 </div>
@@ -115,11 +115,11 @@
 
 
 
-                <div class="row">
-                    <div class="col-6 col-md-3">
-                        <button type="submit" class="btn btn-primary form-control">Додади</button>
+                <div class="row" id="question-buttons">
+                    <div >
+                        <button type="submit" class="btn btn-primary form-control">Зачувај</button>
                     </div>
-                    <div class="col-6 col-md-3">
+                    <div>
                         <a asp-area="Admin" asp-controller="Quiz" asp-action="Create" class="btn btn-primary form-control">Врати се назад</a>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
                         <label class="p-0">Одговор</label>
 
                         <div class="col-6 col-md-3">
-                            <a asp-area="Admin" asp-controller="Answer" asp-action="Create" asp-route-questionId="@Model.Question.Id" class="btn btn-primary border form-control">Додади Одговор</a>
+                            <a asp-area="Admin" asp-controller="Answer" asp-action="Create" asp-route-questionId="@Model.Question.Id" class="btn btn-primary border form-control">Додаj Одговор</a>
                         </div>
 
                     </div>
