--- a/Quiz_mkd/Views/Shared/_Layout.cshtml
+++ b/Quiz_mkd/Views/Shared/_Layout.cshtml
@@ -6,6 +6,15 @@
     <title>@ViewData["Title"] - Quiz_mkd</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/quiz-list.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/welcome-to-quizz.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/add-quiz.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/edit-quiz.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/quiz-details.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/question.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/tables.css" asp-append-version="true" />
+    
+    
 @*     <link rel="stylesheet" href="~/Quiz_mkd.styles.css" asp-append-version="true" />
  *@</head>
 <body>
