--- a/Quiz_mkd/Areas/Admin/Views/Answer/Index.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Answer/Index.cshtml
@@ -34,7 +34,7 @@
                     <td>
                         <div class="w-75 btn-group" role="group">
                             <a  asp-area="Admin" asp-controller="Answer" asp-action="Edit" asp-route-id="@item?.Id" class="btn btn-primary mx-2">
-                                Едитирај
+                                Измени
                             </a>
                           
                         </div>
