--- a/Quiz_mkd/Areas/Admin/Views/Category/Create.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Category/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Category
 
-<div class="card shadow border-0 mt-4">
+<div class="card shadow border-0 mt-4" id="create-question-card">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="text-white py-2">Создади Нова Категорија</h2>
+                <h2 class="text-white py-2">Создаj Нова Категорија</h2>
             </div>
         </div>
     </div>
@@ -19,10 +19,10 @@
 
 
                 <div class="row">
-                    <div class="col-6 col-md-3">
+                    <div >
                         <button type="submit" class="btn btn-primary form-control">Додади</button>
                     </div>
-                    <div class="col-6 col-md-3">
+                    <div >
                         <a asp-area="Admin" asp-controller="Category" asp-action="Index" class="btn btn-primary form-control">Врати се назад</a>
                     </div>
                 </div>
