--- a/Quiz_mkd/Areas/Admin/Views/Category/Index.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Category/Index.cshtml
@@ -7,12 +7,12 @@
         </div>
 
         <div class="col-6 text-end">
-            <a asp-area="Admin" asp-controller="Category" asp-action="Create" class="btn btn-primary"> <i class="bi bi-plus-circle"></i> Додади нова Категорија</a>
+            <a asp-area="Admin" asp-controller="Category" asp-action="Create" class="btn btn-primary"> <i class="bi bi-plus-circle"></i> Додај нова Категорија</a>
 
         </div>
     </div>
 
-    <table class="table table-bordered table-striped">
+    <table class="table table-bordered table-striped" id="tabela">
         <thead>
             <tr>
                 <th>Категорија</th>
@@ -26,9 +26,9 @@
                 <tr>
                     <td>@item?.categoryName</td>
                     <td>
-                        <div class="w-75 btn-group" role="group">
+                        <div  role="group" id="actions">
                             <a asp-area="Admin" asp-controller="Category" asp-action="Edit" asp-route-id="@item?.Id" class="btn btn-primary mx-2">
-                                <i class="bi bi-pencil-square"></i>Едитирај
+                                <i class="bi bi-pencil-square"></i>Измени
                             </a>
                             <a asp-area="Admin" asp-controller="Category" asp-action="Delete" asp-route-id="@item?.Id" class="btn btn-danger mx-2">
                                 <i class="bi bi-trash-fill"></i>Избриши
