--- a/Quiz_mkd/Areas/Admin/Views/Quiz/Create.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Quiz/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model QuizVM
 
-<div class="card shadow border-0 mt-4">
+<div class="add-card">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="text-white py-2">Создади Kвиз</h2>
+                <h2 class="text-white py-2">Креирај квиз</h2>
             </div>
         </div>
     </div>
@@ -43,11 +43,11 @@
                 </div>
 
 
-                <div class="row">
-                    <div class="col-6 col-md-3">
-                        <button type="submit" class="btn btn-primary form-control">Додади</button>
+                <div id="first-buttons">
+                    <div  >
+                        <button type="submit" class="btn btn-primary form-control">Зачувај</button>
                     </div>
-                    <div class="col-6 col-md-3">
+                    <div>
                         <a asp-area="User" asp-controller="Quiz" asp-action="Index" class="btn btn-primary form-control">Врати се назад</a>
                     </div>
                 </div>
