--- a/Quiz_mkd/Areas/Admin/Views/Quiz/Detail.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Quiz/Detail.cshtml
@@ -1,5 +1,5 @@
 ﻿@model QuizVM
-<div class="container">
+<div class="quiz-details-container">
     <div class="row pt-4 pb-3">
         <div class="col-4">
             <h2 class="text-primary">Квиз: @Model.Quiz.Name</h2>
@@ -24,7 +24,7 @@
       
     </div>
 
-    <table class="table table-bordered table-striped">
+    <table class="table table-bordered table-striped" id="quiz-table">
         <thead>
             <tr>
                 @{
@@ -43,7 +43,7 @@
                     <th>Одговор @i:</th>
 
                 }
-                <th>Настан</th>
+                <th>Акција</th>
 
 
             </tr>
@@ -64,10 +64,10 @@
                         
                    
 
-                    <td>
-                        <div class="w-75 btn-group" role="group">
+                    <td id="td-buttons">
+                        <div class="w-75 btn-group" role="group" id="action-buttons">
                             <a asp-area="Admin" asp-controller="Question" asp-action="Edit" asp-route-id="@item?.Id" class="btn btn-primary mx-2">
-                                Едитирај
+                                Измени
                             </a>
                             <a asp-area="Admin" asp-controller="Question" asp-action="Delete" asp-route-id="@item?.Id" class="btn btn-danger mx-2">
                                 Избриши
