--- a/Quiz_mkd/Areas/User/Views/PlayQuiz/ChooseQuestion.cshtml
+++ b/Quiz_mkd/Areas/User/Views/PlayQuiz/ChooseQuestion.cshtml
@@ -4,49 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   @*  <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
-            margin-top: 100px;
-        }
-
-        .question {
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
-
-        .options {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .option {
-            background-color: #007bff;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            font-size: 18px;
-            margin: 5px;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background 0.3s;
-        }
-
-            .option:hover {
-                background-color: #0056b3;
-            }
-    </style> *@
+    <link rel="stylesheet" asp-append-version="true" href="~/css/choose-question.css" />
+ 
 </head>
+<style>
+    .option:hover {
+        background-color: #77d1ed;
+    }
+</style>
 <body>
-    <div class="container">
+    <div class="question-container">
         <h1 class="question">@Model.Question.Text</h1>
         <div class="options">
             
