--- a/Quiz_mkd/Areas/User/Views/PlayQuiz/End.cshtml
+++ b/Quiz_mkd/Areas/User/Views/PlayQuiz/End.cshtml
@@ -2,17 +2,18 @@
 
     <style>
        
-        .container{
-        max-width: 600px; /* Adjust width as needed */
-        width: 100%;
-        margin: auto; /* Centers the container */
+        .results-container{
+        height: 80vh;
         padding: 20px; /* Adds spacing inside the container */
         text-align: center; /* Centers text content */
-       
+        display:flex;
+        flex-direction:column;
+        align-items:center;
+        justify-content:center;
         }
 
         .progress-bar {
-            width: 100%;
+            width: 65vw;
             background: #ddd;
             height: 25px;
             border-radius: 5px;
@@ -45,7 +46,7 @@
   
 </style>
 
-    <div class="container">
+    <div class="results-container">
         <h2>Го заврши квизот @Model.Quiz.Name!</h2>
         <p>Одговори точно <strong>@Model.answersCorrect</strong> од <strong>@Model.totalAnswers</strong></p>
 
