--- a/Quiz_mkd/Areas/User/Views/Quiz/Index.cshtml
+++ b/Quiz_mkd/Areas/User/Views/Quiz/Index.cshtml
@@ -1,80 +1,61 @@
-﻿@model IEnumerable<Quiz>
+﻿@model List<Quiz>
 
-<div class="container">
-    <div class="row pt-4 pb-3">
-        <div class="col-6">
+
+
+<div class="quiz-container" style="padding=0;" >
+    <div class="row pt-4 pb-3" id="naslov">
+        <div class="col-6" >
             <h2 class="text-primary">Листа на Квизови</h2>
         </div>
 
         @if (User.IsInRole(SD.Role_Admin))
         {
             <div class="col-6 text-end">
-                <a asp-area="Admin" asp-controller="Quiz" asp-action="Create" class="btn btn-primary"> <i class="bi bi-plus-circle"></i> Додади нов квиз</a>
+                <a asp-area="Admin" asp-controller="Quiz" asp-action="Create" class="btn btn-primary"> <i class="bi bi-plus-circle"></i> Додај нов квиз</a>
 
-        </div>
+            </div>
         }
     </div>
+    <div class="quiz-cards-container" >
 
-    <table class="table table-bordered table-striped">
-        <thead>
-            <tr>
-                <th>Слика</th>
-                <th>Име</th>
-                @{
-                    int numQuestions = Model.Any() ? Model.Max(u => u.QuestionList?.Count ?? 0) : 0;
-                }
-                @for (int i = 1; i <= numQuestions; i++)
-                {
-                    <th>Прашање @i:</th>
-                
-                }
-                <th>Настан</th>
-                
+    @for(int i=0; i < Model.Count; i++)
+    {
+         var item = Model[i];
+        
 
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td><img src="@item.ImageUrl" alt="Image" class="img-fluid" /></td>
-                    <td>@item?.Name</td>
-                    @foreach(var question in item?.QuestionList )
+        
+
+            <div class="card">
+                <img class="card-img-top" src="@item.ImageUrl" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">@item.Name</h5>
+                    
+                </div>
+                <div class="card-footer">
+                    <a asp-area="User" asp-controller="PlayQuiz" asp-action="Index" asp-route-quizId="@item?.Id" class="btn btn-warning mx-2" id="admin-button">
+                        Играј Квиз
+                    </a>
+                    <div class="admin-buttons">
+                    @if (User.IsInRole(SD.Role_Admin))
                     {
-                        <td>@question?.Text</td>
+                        <a asp-area="Admin" asp-controller="Quiz" asp-action="Edit" asp-route-id="@item?.Id"  class="admin-button">
+                            <i class="bi bi-pencil-square"></i>Измени
+                        </a>
+                        <a asp-area="Admin" asp-controller="Quiz" asp-action="Delete" asp-route-id="@item?.Id"  class="admin-button">
+                            <i class="bi bi-trash-fill"></i>Избриши
+                        </a>
+                        <a asp-area="Admin" asp-controller="Quiz" asp-action="Detail" asp-route-quizId="@item?.Id"  class="admin-button">
+                            Разгледај Квиз
+                        </a>
                     }
-                    @for (int i = item.QuestionList.Count; i <numQuestions; i++)
-                    {
-                        <td>/</td>
-                    }
+                    </div>
+                   
+                </div>
 
-                  
+            </div>
+        
+       
+    }
+    </div>
 
-                    <td>
-                       
-                        <div class="w-75 btn-group" role="group">
-                            @if (User.IsInRole(SD.Role_Admin))
-                            {
-                                <a asp-area="Admin" asp-controller="Quiz" asp-action="Edit" asp-route-id="@item?.Id" class="btn btn-primary mx-2">
-                                    <i class="bi bi-pencil-square"></i>Едитирај
-                                </a>
-                                <a asp-area="Admin"  asp-controller="Quiz" asp-action="Delete" asp-route-id="@item?.Id" class="btn btn-danger mx-2">
-                                    <i class="bi bi-trash-fill"></i>Избриши
-                                </a>
-                                <a asp-area="Admin"  asp-controller="Quiz" asp-action="Detail" asp-route-quizId="@item?.Id" class="btn btn-info mx-2">
-                                    Разгледај Квиз
-                                </a>
-                            }
-                            <a asp-area="User" asp-controller="PlayQuiz" asp-action="Index" asp-route-quizId="@item?.Id" class="btn btn-warning mx-2">
-                                Играј Квиз
-                            </a>
-                        </div>
-
-                    </td>
-
-                </tr>
-            }
-
-        </tbody>
-
-    </table>
+</div>
